# huma-signals

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-ci.yml  mypy.ini  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cd.yaml  cd_develop.yaml  cd_new_repo.yaml  ci-develop.yml  ci-main.yml  ci-pr.yaml  ci.yaml  ci_merge.yml  ci_pr.yaml  gitleaks.yml  ok_to_test.yaml
docs/: contributing.md  decentralized_signal_portfolio.md  getting_started.md
huma_signals/: constants.py  exceptions.py  models.py  settings.py
huma_signals/adapters/: models.py  registry.py
huma_signals/adapters/allowlist/: README.md  adapter.py
huma_signals/adapters/allowlist_contract/: README.md  adapter.py
huma_signals/adapters/allowlist_contract/abi/: YourContract.json
huma_signals/adapters/banking/: adapter.py  plaid_client.py
huma_signals/adapters/bulla_network/: adapter.py  models.py
huma_signals/adapters/ethereum_wallet/: README.md  adapter.py
huma_signals/adapters/lending_pools/: README.md  adapter.py  registry.py  settings.py
huma_signals/adapters/lending_pools/abi/: SuperfluidFactoringPool.json
huma_signals/adapters/polygon_wallet/: README.md  adapter.py
huma_signals/adapters/request_network/: README.md  adapter.py  models.py  request_invoice_adapter.py  request_transaction_adapter.py  settings.py
huma_signals/adapters/spectral/: adapter.py  spectral_client.py
huma_signals/adapters/superfluid/: settings.py  superfluid_adapter.py  superfluid_models.py
huma_signals/adapters/utils/: etherscan_client.py
huma_signals/adapters/wallet_eth_txns/: README.md  adapter.py
huma_signals/api/: exception_handlers.py  main.py  models.py  views.py
huma_signals/clients/eth_client/: eth_client.py  eth_types.py
huma_signals/clients/polygon_client/: polygon_client.py  polygon_types.py
huma_signals/clients/request_client/: request_client.py  request_types.py
huma_signals/commons/: async_utils.py  chains.py  datetime_utils.py  number_utils.py  pydantic_utils.py  string_utils.py  tokens.py  web3_utils.py
huma_signals/domain/adapters/: fake_ethereum_wallet_adapter.py  fake_polygon_wallet_adapter.py  models.py  registry.py
huma_signals/domain/clients/: request_client.py
huma_signals/dotenv/: example.env  test.env
tests/: conftest.py  test_settings.py
tests/adapters/: test_registry.py
tests/adapters/allowlist/: test_adapter.py
tests/adapters/banking/: test_adapter.py
tests/adapters/bulla_network/: test_adapter.py  test_models.py
tests/adapters/ethereum_wallet/: test_adapter.py
tests/adapters/lending_pools/: test_adapter.py
tests/adapters/polygon_wallet/: test_adapter.py
tests/adapters/request_network/: test_adapter.py  test_invoice_adapter.py  test_models.py  test_transaction_adapter.py
tests/adapters/superfluid/: test_superfluid_adapter.py
tests/adapters/wallet_eth_txns/: test_adapter.py
tests/api/: test_main.py  test_views.py
tests/api/e2e/: test_api.py
tests/clients/: test_eth_client.py  test_polygon_client.py  test_request_client.py
tests/commons/: test_chains.py  test_number_utils.py  test_pydantic_utils.py  test_tokens.py  test_web3_utils.py
tests/domain/adapters/: test_registry.py
tests/domain/clients/: test_eth_client.py  test_polygon_client.py  test_request_client.py
tests/fixtures/adapters/: fake_ethereum_wallet_adapter.py
tests/fixtures/eth/: eth_fixtures.py  fake_eth_client.py
tests/fixtures/polygon/: fake_polygon_client.py
tests/fixtures/request/: fake_request_client.py  request_type_factories.py
tests/helpers/: address_helpers.py  api_helpers.py  vcr_helpers.py
tests/helpers/scripts/: generate_plaid_public_token.py
(+52 files in other folders)
