[tool.poetry]
name = "huma-signals"
version = "0.1.0"
description = ""
authors = ["Lei Du <lei@huma.finance>"]
license = "AGPL v3"
readme = "README.md"
packages = [{include = "huma_signals"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
structlog = "^22.3.0"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
python-dotenv = "^0.21.0"
web3 = "^5.31.3"


[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.0.1"
pytest = "^7.2.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
black = "^22.12.0"
autoflake = "^2.0.0"
ipython = "^8.7.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
